--- a/style.css
+++ b/style.css
@@ -1,17 +1,48 @@
 
 /*Global Styles
 ---------------------------------*/
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after{
+    box-sizing: inherit;
+}
+
 body {
 color: #343434;
+margin: 0;
+padding: 0;
+font-family: 'Montserrat', sans-serif;
+font-size: 15px;
+line-height: 1.5;
 }
 img {
     width: 300px;
 }
 a {
-    color: #FFE66D;
+    color: #6b6232;
 }
 a:hover{
     text-decoration: none;
+}
+h1{
+    font-size: 75px;
+    line-height: 1;
+}
+h2 {
+  
+   font-size: 45px;
+}
+h1, h2 {
+    font-family: 'Caveat', cursive;
+    font-weight: 400;
+    margin: 0;
+}
+.content-wrap {
+    width: 800px;
+    margin: 0 auto;
+    padding: 60px 0;
+
 }
 
 
@@ -37,9 +68,19 @@ header {background-color: #2F3061;
  text-decoration: none;
  padding: 8px;
  border-radius: 4px;
+ display: inline-block;
 }
 .projects .btn:hover {
     background: rgba( 47, 48, 97, 80%);
+}
+.project-item {
+    overflow: hidden;
+   
+}
+.project-item img {
+    float: left;
+    margin: right 20px;
+    
 }
 
 /* Work Experience
